--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="client.js"></script>
     
+    <div class="tools">
+        <h1 style="color:yellowgreen">Events</h1>
+        <ul>
+            <li>
+                <button onclick="kill()">Kill them all</button>
+            </li>
+        </ul>
+    </div>
+
 </body>
 </html>
