--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  </head>
+  <body>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <script src="client.js"></script>
-    
-    <div class="tools">
-        <h1 style="color:yellowgreen">Events</h1>
-        <ul>
-            <li>
-                <button onclick="kill()">Kill them all</button>
-            </li>
-        </ul>
-    </div>
 
-</body>
+    <div>
+      <h1 id="weather"></h1>
+    </div>
+    <div class="tools">
+      <h1 style="color: yellowgreen">Events</h1>
+      <ul>
+        <li>
+          <button onclick="kill()">Kill them all</button>
+        </li>
+        <li>
+          <button onclick="addGrass()">Add grass</button>
+        </li>
+        <li>
+          <button onclick="addGrassEater()">Add Eater</button>
+        </li>
+        <li>
+          <button onclick="addPredator()">Add Predator</button>
+        </li>
+        <li>
+          <button onclick="addOmnivorous()">Add Omnivorous</button>
+        </li>
+        <li>
+          <button onclick="addFlower()">Add Flower</button>
+        </li>
+      </ul>
+    </div>
+    <script src="client.js"></script>
+  </body>
 </html>
